--- a/src/css/Keyboard.css
+++ b/src/css/Keyboard.css
@@ -1,25 +1,36 @@
+#keyboard{
+    display:flex;
+    flex-direction: column;
+    /* border: 1px solid green; */
+    width: 80vw;
+    align-items: center;
+    /* justify-content: center; */
+}
+
 #topRow{
-    width: 30vw;
+    min-width: fit-content;
+    max-width: 90%;
+    display:flex;
+    justify-content: space-between;
+    /* border: 1px solid orange; */
+}
+
+#middleRow{
+    min-width: fit-content;
+    /* margin-left: 2.5vw; */
     display:flex;
     justify-content: space-between;
 }
 
-#middleRow{
-    width: 25vw;
-    margin-left: 2.5vw;
-    display:flex;
-    justify-content: space-around;
-}
-
 #bottomRow{
-    width: 30vw;
+    min-width: fit-content;
     display:flex;
     justify-content: space-between;
 }
 
 .letter{
     border: solid 1px black;
-    padding: 10px;
+    padding: 5px;
 }
 
 .yellow {
